# mapeathor

./: .gitignore  .travis.yml  CITATION.cff  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yaml  docker-compose.yml  exec  pyproject.toml  requirements.txt  run.sh  setup.py
.github/workflows/: pypi-publish.yml  python-publish.yml
PoC/: MappingRml.ttl  MappingYarrrml.yml  README.md
bio2rdf-usecase/: Example SciKnow.xlsx
bio2rdf-usecase/CTD/: ctd-chem_gene_inx.xlsx  ctd-chem_go.xlsx  ctd-chem_pathways.xlsx  ctd-chemicals.xlsx  ctd-chemicals_diseases.xlsx  ctd-diseases.xlsx  ctd-genes_diseases.xlsx  ctd-pathways.xlsx
bio2rdf-usecase/ClinicalTrials/: clinicaltrials.xlsx
bio2rdf-usecase/GenAge/: genage-human.xlsx  genage-model.xlsx
bio2rdf-usecase/GenDR/: gendr-manipulations.xlsx
bio2rdf-usecase/HGNC/: hgnc.xlsx
bio2rdf-usecase/Homologene/: homologene.xlsx
bio2rdf-usecase/LSR/: lsr.xlsx
bio2rdf-usecase/NCBIgene/: gene2accession.xlsx  gene2ensembl.xlsx  gene2go.xlsx  gene2pubmed.xlsx  gene2sts.xlsx  gene2unigene.xlsx  gene2vega.xlsx  gene_info.xlsx
bio2rdf-usecase/NDC/: ndc-package.xlsx  ndc-product.xlsx
code/: datatypes.json  exec  gdrive_api.py  main.py  main_translator.py  requirements.txt
data/: .~lock.final.xlsx#  default.xlsx  final.xlsx  test.xlsx
result/: Mapping.ttl  OutputEstaciones-rml.ttl  OutputEstaciones.yml  datos-contaminacion-estaciones.nt  final.r2rml.ttl  final.rml.ttl  inputEstacionesContaminacion.yml  inputTraffic.yml  prueba.r2rml.ttl  prueba.rml.ttl  prueba.yml
templates/: TMprueba.yml  wormbase-geneid.xlsx
tmp/: ConstantObject.txt  ConstantObject.yml  Function.txt  Function.yml  Join.txt  Join.yml  Prefixes.txt  Prefixes.yml  ReferenceObject.txt  ReferenceObject.yml  Source.txt  Source.yml  Subject.txt  Subject.yml  Template.txt  Template.yml  TriplesMap.txt  TriplesMap.yml
tutorial-kgc22/: empty_template.xlsx  stop-stoptimes.xlsx
(+240 files in other folders)
